1998-07-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.ads: Add some stat info to count sigpoll interrupts and 
	sigpoll timeouts.

	* s-ganobl.adb: Merge Set_Asynchronous and Set_Non_Blocking
 	because they were both executing Fcntl (FD, F_Setfl, ...) such a
 	way that the flag status of the first call was removed by the
 	second. We have only one call to Fcntl with Fasync + Fndelay. Add
 	some stat info to count sigpoll interrupts and sigpoll timeouts.

	* s-gasoli.adb: Add some debugging info.

	* Makefile.am, Makefile.in: Just recompile linktest and bind
	it. Don't try to link it.
	
1998-07-20  Pascal Obry  <obry@gnat.com>

	* Makefile.am, Makefile.in: Fix a bug for NT build.

1998-07-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Fix a bug concerning inlined gnatlib
 	regeneration introduced by new linktest.

1998-07-02  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Add debugging information.

1998-06-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.ads, s-garuti.adb: Move exception utilities to
 	System.Garlic.Exceptions.
	
	* s-garexc.adb, s-garexc.ads: Move exception utilities to
 	System.Garlic.Exceptions.

	* s-gartcp.adb: Update because of previous changes.

	* s-parint.adb: Use function Different which was implemented but
	never used. Different compares to Version_ID and adds a special
	rule for Empty_Version (to please ADEPT project).

	* Makefile.am, Makefile.in: Update because of new unit.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gasoli.ads, s-gasoli.adb: New package containing soft links
	for termination-related stuff.

	* s-gaphlo.ads, s-gaphlo.adb: Use pragma Stream_Convert instead
	than defining stream attributes that do the same thing.

	* s-gartcp.adb: Return "tcp" only as location when the light
	runtime has been activated to emphasize that fact.

	* s-garhea.ads: Move the types Public_Data and Partition_Data into 
	the body, and add access functions to read the various values.